Añadimos un icon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio Área de Rectángulo</title>
     <link rel="stylesheet" href="/styles/style.css">
-    <link rel="favicon" href="/assets/molinon.png" type="image/x-icon">
+    <link rel="favicon" href="/molinon.png" type="image/x-icon">
     <!--Esta estiqueta link nos ayuda a introducir el icono-->
 </head>
 <body>
