--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div id="area"></div>
     <div id="perimetro"></div>
     <div id="diagonal"></div>
+    <div></div>
 
     <script src="/scripts/index.js"></script>
 </body>
